--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,6 @@ tokio = { version = "1.47.1", features = [
 ], default-features = false }
 base64 = "0.22.1"
 webbrowser = "1.0.5"
-once_cell = "1.21.3"
 self_update = { version = "0.42.0", features = [
     "archive-zip",
     "archive-tar",
@@ -38,6 +37,10 @@ anyhow = "1.0.99"
 log = "0.4.27"
 env_logger = "0.11.8"
 chrono = { version = "0.4", features = ["serde"] }
+semver = "1.0.26"
+sha2 = "0.11.0-rc.0"
+regex = "1.11.2"
+hex = "0.4.3"
 
 [features]
 default = ["desktop"]
@@ -48,6 +51,10 @@ minimal = []
 [[bin]]
 name = "DreamLauncher"
 path = "src/main.rs"
+
+[[bin]]
+name = "updater"
+path = "src/bin/updater.rs"
 
 [build-dependencies]
 winres = "0.1.12"
