--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -9,29 +9,141 @@ env:
   RUST_BACKTRACE: 1
 
 jobs:
-  build:
-    name: Build
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-24.04, macos-14, windows-2025]
+  build-windows:
+    name: Windows
+    runs-on: windows-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Deps (Windows)
-        if: matrix.os == 'windows-2025'
+      - name: Install Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.13'
+
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r python/requirements.txt
+
+      - name: Install dependencies
         run: choco install upx
 
-      - name: Deps (Linux)
-        if: matrix.os == 'ubuntu-24.04'
+      - name: Cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.rustup
+            ~/.cargo/bin
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: windows-allcache-${{ hashFiles('rust-toolchain.toml') }}-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: windows-allcache-
+
+      - name: Build Rust
+        run: cargo build --release --locked --features "desktop"
+
+      - name: Compress
+        run: |
+          upx --best --lzma target/release/DreamLauncher.exe
+
+      - name: Install NSIS
+        run: |
+          choco install nsis -y
+
+      - name: Create installer
+        run: |
+          mkdir dist
+          powershell -ExecutionPolicy Bypass -File scripts/windows/build_installer.ps1 -Version "${{ github.ref_name || 'dev' }}"
+
+      - name: Upload installer
+        uses: actions/upload-artifact@v4
+        with:
+          name: DreamLauncher-Windows
+          path: |
+            dist/Dream Launcher Setup.exe
+
+  build-linux:
+    name: Linux
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.13'
+
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r python/requirements.txt
+
+      - name: Install dependencies
         uses: awalsh128/cache-apt-pkgs-action@v1
         with:
-          packages: libgtk-3-dev libglib2.0-dev libsoup-3.0-dev libssl-dev libjavascriptcoregtk-4.1-dev libwebkit2gtk-4.1-dev libxdo-dev pkg-config build-essential curl xdotool upx-ucl
+          packages: libgtk-3-dev libglib2.0-dev libsoup-3.0-dev libssl-dev libjavascriptcoregtk-4.1-dev libwebkit2gtk-4.1-dev libxdo-dev pkg-config build-essential curl xdotool upx-ucl libfuse2
           version: 1
 
-      - name: Deps (macOS)
-        if: matrix.os == 'macos-14'
+      - name: Cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.rustup
+            ~/.cargo/bin
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: linux-allcache-${{ hashFiles('rust-toolchain.toml') }}-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: linux-allcache-
+
+      - name: Build Rust
+        run: cargo build --release --locked --features "desktop"
+
+      - name: Compress
+        run: |
+          upx --best --lzma target/release/DreamLauncher
+
+      - name: Install AppImage
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y file
+          wget https://github.com/AppImage/AppImageKit/releases/download/continuous/appimagetool-x86_64.AppImage
+          chmod +x appimagetool-x86_64.AppImage
+          sudo mv appimagetool-x86_64.AppImage /usr/local/bin/appimagetool
+
+      - name: Create AppImage
+        run: |
+          chmod +x scripts/linux/appimage.sh
+          ./scripts/linux/appimage.sh
+
+      - name: Upload AppImage
+        uses: actions/upload-artifact@v4
+        with:
+          name: DreamLauncher-Linux-AppImage
+          path: |
+            *.AppImage
+
+  build-macos:
+    name: macOS
+    runs-on: macos-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.13'
+
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r python/requirements.txt
+
+      - name: Install dependencies
         run: brew install create-dmg upx
 
       - name: Cache
@@ -43,65 +155,46 @@ jobs:
             ~/.cargo/registry
             ~/.cargo/git
             target
-          key: ${{ runner.os }}-allcache-${{ hashFiles('rust-toolchain.toml') }}-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: ${{ runner.os }}-allcache-
+          key: macos-allcache-${{ hashFiles('rust-toolchain.toml') }}-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: macos-allcache-
 
-      - name: Build
+      - name: Build Rust
         run: cargo build --release --locked --features "desktop"
 
       - name: Compress
-        shell: bash
         run: |
-          if [[ "${{ runner.os }}" == "Windows" ]]; then
-            upx --best --lzma "target/release/DreamLauncher.exe"
-          elif [[ "${{ runner.os }}" == "Linux" ]]; then
-            upx --best --lzma "target/release/DreamLauncher"
-          elif [[ "${{ runner.os }}" == "macOS" ]]; then
-            chmod +x scripts/macos/compress.sh
-            ./scripts/macos/compress.sh "target/release/DreamLauncher"
-          fi
+          chmod +x scripts/macos/compress.sh
+          ./scripts/macos/compress.sh "target/release/DreamLauncher"
 
       - name: Package
         shell: bash
         run: |
           set -e
           mkdir -p dist
-          if [[ "${{ runner.os }}" == "Windows" ]]; then
-            cp "target/release/DreamLauncher.exe" "dist/Dream Launcher.exe"
-            powershell -Command "Compress-Archive -Path 'dist/Dream Launcher.exe' -DestinationPath 'DreamLauncher-Windows.zip'"
-          elif [[ "${{ runner.os }}" == "macOS" ]]; then
-            chmod +x scripts/macos/bundle.sh
-            ./scripts/macos/bundle.sh
+          chmod +x scripts/macos/bundle.sh
+          ./scripts/macos/bundle.sh
 
-            chmod +x scripts/macos/clean.sh
-            ./scripts/macos/clean.sh "target/release/Dream Launcher.app"
+          chmod +x scripts/macos/clean.sh
+          ./scripts/macos/clean.sh "target/release/Dream Launcher.app"
 
-            chmod +x scripts/macos/sign.sh
-            ./scripts/macos/sign.sh "target/release/Dream Launcher.app"
+          chmod +x scripts/macos/sign.sh
+          ./scripts/macos/sign.sh "target/release/Dream Launcher.app"
 
-            chmod +x scripts/macos/dmg.sh
-            ./scripts/macos/dmg.sh
-
-            if [[ -f "Dream Launcher.dmg" ]]; then
-              mv "Dream Launcher.dmg" "dist/Dream Launcher.dmg"
-              zip -j "DreamLauncher-macOS.zip" "dist/Dream Launcher.dmg"
-              echo "DMG created and zipped successfully"
-            else
-              echo "No DMG file found"
-              exit 1
-            fi
-
-            echo "macOS packaging completed"
+          chmod +x scripts/macos/dmg.sh
+          ./scripts/macos/dmg.sh
+          if [[ -f "Dream Launcher.dmg" ]]; then
+            mv "Dream Launcher.dmg" "dist/Dream Launcher.dmg"
+            echo "DMG created successfully"
           else
-            cp "target/release/DreamLauncher" "dist/Dream Launcher"
-            zip -j "DreamLauncher-Linux.zip" "dist/Dream Launcher"
+            echo "No DMG file found"
+            exit 1
           fi
 
-      - name: Upload
+          echo "macOS packaging completed"
+
+      - name: Upload macOS
         uses: actions/upload-artifact@v4
         with:
-          name: DreamLauncher-${{ runner.os }}
+          name: DreamLauncher-macOS
           path: |
-            DreamLauncher-Windows.zip
-            DreamLauncher-Linux.zip
-            DreamLauncher-macOS.zip
+            dist/Dream Launcher.dmg
