--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,7 +10,7 @@ env:
 
 jobs:
   build-windows:
-    name: Windows
+    name: Windows x64
     runs-on: windows-latest
     steps:
       - name: Checkout
@@ -38,8 +38,8 @@ jobs:
             ~/.cargo/registry
             ~/.cargo/git
             target
-          key: windows-allcache-${{ hashFiles('rust-toolchain.toml') }}-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: windows-allcache-
+          key: windows-x64-allcache-${{ hashFiles('rust-toolchain.toml') }}-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: windows-x64-allcache-
 
       - name: Build Rust
         run: cargo build --release --locked --features "desktop"
@@ -60,9 +60,60 @@ jobs:
       - name: Upload installer
         uses: actions/upload-artifact@v4
         with:
-          name: DreamLauncher-Windows
+          name: DreamLauncher-Windows-x64
           path: |
             dist/Dream Launcher Setup.exe
+
+  build-windows-arm64:
+    name: Windows ARM64
+    runs-on: windows-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.13'
+
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r python/requirements.txt
+
+      - name: Install Rust ARM64 target
+        run: rustup target add aarch64-pc-windows-msvc
+
+      - name: Cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.rustup
+            ~/.cargo/bin
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: windows-arm64-allcache-${{ hashFiles('rust-toolchain.toml') }}-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: windows-arm64-allcache-
+
+      - name: Build Rust for ARM64
+        run: cargo build --release --locked --features "desktop" --target aarch64-pc-windows-msvc
+
+      - name: Install NSIS
+        run: |
+          choco install nsis -y
+
+      - name: Create ARM64 installer
+        run: |
+          mkdir dist
+          powershell -ExecutionPolicy Bypass -File scripts/windows/build_installer.ps1 -Version "${{ github.ref_name || 'dev' }}" -Architecture "ARM64"
+
+      - name: Upload ARM64 installer
+        uses: actions/upload-artifact@v4
+        with:
+          name: DreamLauncher-Windows-ARM64
+          path: |
+            dist/Dream Launcher Setup ARM64.exe
 
   build-linux:
     name: Linux
