--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -38,13 +38,26 @@ pre-commit = [
     "warnings",
 ]
 
-# Configuration for the build process.
-[build]
-rustflags = ["-C", "target-cpu=native"]
-
 # Target-specific configurations.
 [target.'cfg(target_os = "macos")']
 rustflags = ["-C", "link-arg=-Wl,-rpath,@loader_path"]
+
+# Native compilation flags (x86_64 and aarch64 on their respective platforms)
+[target.x86_64-pc-windows-msvc]
+rustflags = ["-C", "target-cpu=native"]
+
+[target.x86_64-unknown-linux-gnu]
+rustflags = ["-C", "target-cpu=native"]
+
+[target.x86_64-apple-darwin]
+rustflags = ["-C", "target-cpu=native", "-C", "link-arg=-Wl,-rpath,@loader_path"]
+
+[target.aarch64-apple-darwin]
+rustflags = ["-C", "target-cpu=native", "-C", "link-arg=-Wl,-rpath,@loader_path"]
+
+# Cross-compilation targets (no target-cpu=native to avoid warnings)
+[target.aarch64-pc-windows-msvc]
+rustflags = []
 
 # Environment variables for the build process.
 [env]
