--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -38,13 +38,16 @@ pre-commit = [
     "warnings",
 ]
 
-# Configuration for the build process.
-[build]
+# Target-specific configurations.
+# Native compilation flags
+[target.x86_64-pc-windows-msvc]
 rustflags = ["-C", "target-cpu=native"]
 
-# Target-specific configurations.
-[target.'cfg(target_os = "macos")']
-rustflags = ["-C", "link-arg=-Wl,-rpath,@loader_path"]
+[target.x86_64-unknown-linux-gnu]
+rustflags = ["-C", "target-cpu=native"]
+
+[target.aarch64-pc-windows-msvc]
+rustflags = []
 
 # Environment variables for the build process.
 [env]
