--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ tokio = { version = "1.47.1", features = [
     "sync",
     "macros",
     "net",
+    "signal",
 ], default-features = false }
 base64 = "0.22.1"
 webbrowser = "1.0.5"
@@ -41,13 +42,13 @@ semver = "1.0.26"
 sha2 = "0.11.0-rc.0"
 regex = "1.11.2"
 hex = "0.4.3"
-tempfile = "3.21.0"
+pyo3 = { version = "0.26.0", features = ["auto-initialize"] }
 
 [features]
 default = ["desktop"]
 desktop = ["dioxus/desktop"]
-
 minimal = []
+memory-optimized = []
 
 [[bin]]
 name = "DreamLauncher"
@@ -64,6 +65,8 @@ base64 = "0.22.1"
 
 [profile.dev]
 incremental = true
+opt-level = 1
+debug = 1
 
 [profile.release]
 opt-level = "z"
