--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,7 +42,7 @@ semver = "1.0.26"
 sha2 = "0.11.0-rc.0"
 regex = "1.11.2"
 hex = "0.4.3"
-pyo3 = { version = "0.26.0", features = ["auto-initialize"] }
+pyo3 = { version = "0.26.0", features = ["auto-initialize", "abi3-py38"] }
 
 [features]
 default = ["desktop"]
