feat: update dependencies for Windows ARM64 and streamline Python installation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,7 +42,6 @@ semver = "1.0.26"
 sha2 = "0.11.0-rc.0"
 regex = "1.11.2"
 hex = "0.4.3"
-pyo3 = { version = "0.26.0", features = ["auto-initialize", "abi3-py38"] }
 
 [features]
 default = ["desktop"]
@@ -84,13 +83,30 @@ split-debuginfo = "off"
 [profile.release.package."*"]
 opt-level = "z"
 
+# Windows ARM64 specific dependencies with native-tls
+[target.'cfg(all(windows, target_arch = "aarch64"))'.dependencies]
+reqwest = { version = "0.12.23", features = ["json", "stream", "native-tls"], default-features = false }
+self_update = { version = "0.42.0", features = [
+    "archive-zip",
+    "archive-tar",
+    "compression-flate2",
+], default-features = false }
+
+# PyO3 and TLS dependencies for all platforms except Windows ARM64
+[target.'cfg(not(all(windows, target_arch = "aarch64")))'.dependencies]
+pyo3 = { version = "0.26.0", features = ["auto-initialize", "abi3-py38"] }
+reqwest = { version = "0.12.23", features = ["json", "stream", "rustls-tls"], default-features = false }
+self_update = { version = "0.42.0", features = [
+    "archive-zip",
+    "archive-tar",
+    "compression-flate2",
+    "rustls",
+], default-features = false }
+
 [target.'cfg(windows)'.dependencies]
 dioxus-desktop = { version = "0.7.0-rc.0", default-features = false, features = [
     "tokio_runtime",
 ] }
-
-[target.'cfg(all(windows, target_arch = "aarch64"))'.dependencies]
-pyo3 = { version = "0.26.0", optional = false }
 
 [package.metadata.bundle]
 name = "Dream Launcher"
