feat: embed assets and py files (#42)
* feat: add support for ARM64 architecture in installer script
* feat: add native compilation flags for ARM64 and x86_64 targets in config
* fix: add proper quoting
* fix: remove macOS specific rustflags from configuration
* feat: embed Python files and streamline dependency installation process
* feat: add support for custom PNG icons in AppImage packaging
* feat: update CI configuration to use new versions of systems
* feat: add Python installation checks and improve scripts
* fix: Python installation check by querying registry and PATH
* feat: enhance Python installer
* feat: embed Python and improve communication between frontend and backend
* feat: adjust WebView2 memory settings for improved performance
* fix: include abi3-py38 to pyo3
* feat: add pyo3 dependency for ARM64 Windows target
* feat: update dependencies for Windows ARM64 and streamline Python installation
* feat: update pyo3 dependency for Windows ARM64 and streamline TLS configuration
* feat: add step to verify Python libs path and check for python3.lib in CI

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -11,7 +11,7 @@ env:
 jobs:
   build-windows:
     name: Windows x64
-    runs-on: windows-latest
+    runs-on: windows-2025
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -66,7 +66,7 @@ jobs:
 
   build-windows-arm64:
     name: Windows ARM64
-    runs-on: windows-latest
+    runs-on: windows-2025
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -80,6 +80,18 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r python/requirements.txt
+
+      - name: Install Python libs path
+        shell: pwsh
+        run: |
+          $pythonRoot = (python -c "import sys; print(sys.base_prefix)")
+          $libPath = Join-Path $pythonRoot "libs"
+          echo "Python libs path: $libPath"
+          echo "LIB=$libPath;$env:LIB" | Out-File -FilePath $env:GITHUB_ENV -Append
+          if (!(Test-Path (Join-Path $libPath "python3.lib"))) {
+            Write-Host "python3.lib not found in $libPath"
+            exit 1
+          }
 
       - name: Install Rust ARM64 target
         run: rustup target add aarch64-pc-windows-msvc
@@ -117,7 +129,7 @@ jobs:
 
   build-linux:
     name: Linux
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -179,7 +191,7 @@ jobs:
 
   build-macos:
     name: macOS
-    runs-on: macos-latest
+    runs-on: macos-15
     steps:
       - name: Checkout
         uses: actions/checkout@v4
