--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ tokio = { version = "1.47.1", features = [
     "sync",
     "macros",
     "net",
+    "signal",
 ], default-features = false }
 base64 = "0.22.1"
 webbrowser = "1.0.5"
@@ -36,17 +37,18 @@ futures-util = "0.3.31"
 anyhow = "1.0.99"
 log = "0.4.27"
 env_logger = "0.11.8"
-chrono = { version = "0.4", features = ["serde"] }
+chrono = { version = "0.4.41", features = ["serde"] }
 semver = "1.0.26"
 sha2 = "0.11.0-rc.0"
 regex = "1.11.2"
 hex = "0.4.3"
+pyo3 = { version = "0.26.0", features = ["auto-initialize", "abi3-py38"] }
 
 [features]
 default = ["desktop"]
 desktop = ["dioxus/desktop"]
-
 minimal = []
+memory-optimized = []
 
 [[bin]]
 name = "DreamLauncher"
@@ -58,9 +60,13 @@ path = "src/bin/updater.rs"
 
 [build-dependencies]
 winres = "0.1.12"
+log = "0.4.27"
+base64 = "0.22.1"
 
 [profile.dev]
 incremental = true
+opt-level = 1
+debug = 1
 
 [profile.release]
 opt-level = "z"
@@ -78,15 +84,22 @@ split-debuginfo = "off"
 [profile.release.package."*"]
 opt-level = "z"
 
-[profile.wasm-dev]
-inherits = "dev"
-opt-level = 1
+[target.'cfg(all(windows, target_arch = "aarch64"))'.dependencies]
+reqwest = { version = "0.12.23", features = ["json", "stream", "native-tls"], default-features = false }
+self_update = { version = "0.42.0", features = [
+    "archive-zip",
+    "archive-tar",
+    "compression-flate2",
+], default-features = false }
 
-[profile.server-dev]
-inherits = "dev"
-
-[profile.android-dev]
-inherits = "dev"
+[target.'cfg(not(all(windows, target_arch = "aarch64")))'.dependencies]
+reqwest = { version = "0.12.23", features = ["json", "stream", "rustls-tls"], default-features = false }
+self_update = { version = "0.42.0", features = [
+    "archive-zip",
+    "archive-tar",
+    "compression-flate2",
+    "rustls",
+], default-features = false }
 
 [target.'cfg(windows)'.dependencies]
 dioxus-desktop = { version = "0.7.0-rc.0", default-features = false, features = [
