--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,4 +1,4 @@
-# Rust workflow to build and package the launcher for Windows, macOS, and Linux.
+# Dioxus-based workflow to build and package the launcher for Windows, macOS, and Linux.
 
 name: Rust CI
 
@@ -12,6 +12,9 @@ jobs:
   build-windows:
     name: Windows x64
     runs-on: windows-2025
+    defaults:
+      run:
+        working-directory: launcher
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -27,7 +30,9 @@ jobs:
           pip install -r python/requirements.txt
 
       - name: Install dependencies
-        run: choco install upx
+        run: |
+          rustup update stable
+          cargo install --locked dioxus-cli
 
       - name: Cache
         uses: actions/cache@v4
@@ -38,35 +43,26 @@ jobs:
             ~/.cargo/registry
             ~/.cargo/git
             target
-          key: windows-x64-allcache-${{ hashFiles('rust-toolchain.toml') }}-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: windows-x64-allcache-
+          key: windows-x64-dioxus-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: windows-x64-dioxus-
 
-      - name: Build Rust
-        run: cargo build --release --locked --features "desktop"
-
-      - name: Compress
-        run: |
-          upx --best --lzma target/release/DreamLauncher.exe
-
-      - name: Install NSIS
-        run: |
-          choco install nsis -y
-
-      - name: Create installer
-        run: |
-          mkdir dist
-          powershell -ExecutionPolicy Bypass -File scripts/windows/build_installer.ps1 -Version "${{ github.ref_name || 'dev' }}"
+      - name: Build
+        run: dx bundle --release --platform desktop
 
       - name: Upload installer
         uses: actions/upload-artifact@v4
         with:
           name: DreamLauncher-Windows-x64
           path: |
-            dist/Dream Launcher Setup.exe
+            target/release/bundle/msi/*.msi
+            target/release/bundle/nsis/*.exe
 
   build-windows-arm64:
     name: Windows ARM64
     runs-on: windows-2025
+    defaults:
+      run:
+        working-directory: launcher
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -81,20 +77,11 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r python/requirements.txt
 
-      - name: Install Python libs path
-        shell: pwsh
+      - name: Install Rust
         run: |
-          $pythonRoot = (python -c "import sys; print(sys.base_prefix)")
-          $libPath = Join-Path $pythonRoot "libs"
-          echo "Python libs path: $libPath"
-          echo "LIB=$libPath;$env:LIB" | Out-File -FilePath $env:GITHUB_ENV -Append
-          if (!(Test-Path (Join-Path $libPath "python3.lib"))) {
-            Write-Host "python3.lib not found in $libPath"
-            exit 1
-          }
-
-      - name: Install Rust ARM64 target
-        run: rustup target add aarch64-pc-windows-msvc
+          rustup update stable
+          rustup target add aarch64-pc-windows-msvc
+          cargo install --locked dioxus-cli
 
       - name: Cache
         uses: actions/cache@v4
@@ -105,31 +92,26 @@ jobs:
             ~/.cargo/registry
             ~/.cargo/git
             target
-          key: windows-arm64-allcache-${{ hashFiles('rust-toolchain.toml') }}-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: windows-arm64-allcache-
+          key: windows-arm64-dioxus-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: windows-arm64-dioxus-
 
-      - name: Build Rust for ARM64
-        run: cargo build --release --locked --features "desktop" --target aarch64-pc-windows-msvc
+      - name: Build
+        run: dx bundle --release --platform desktop --target aarch64-pc-windows-msvc
 
-      - name: Install NSIS
-        run: |
-          choco install nsis -y
-
-      - name: Create ARM64 installer
-        run: |
-          mkdir dist
-          powershell -ExecutionPolicy Bypass -File scripts/windows/build_installer.ps1 -Version "${{ github.ref_name || 'dev' }}" -Architecture "ARM64"
-
-      - name: Upload ARM64 installer
+      - name: Upload Windows ARM64 installer
         uses: actions/upload-artifact@v4
         with:
           name: DreamLauncher-Windows-ARM64
           path: |
-            dist/Dream Launcher Setup ARM64.exe
+            target/aarch64-pc-windows-msvc/release/bundle/msi/*.msi
+            target/aarch64-pc-windows-msvc/release/bundle/nsis/*.exe
 
   build-linux:
     name: Linux
     runs-on: ubuntu-24.04
+    defaults:
+      run:
+        working-directory: launcher
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -147,8 +129,13 @@ jobs:
       - name: Install dependencies
         uses: awalsh128/cache-apt-pkgs-action@v1
         with:
-          packages: libgtk-3-dev libglib2.0-dev libsoup-3.0-dev libssl-dev libjavascriptcoregtk-4.1-dev libwebkit2gtk-4.1-dev libxdo-dev pkg-config build-essential curl xdotool upx-ucl libfuse2
+          packages: libgtk-3-dev libglib2.0-dev libsoup-3.0-dev libssl-dev libjavascriptcoregtk-4.1-dev libwebkit2gtk-4.1-dev libxdo-dev pkg-config build-essential curl xdotool
           version: 1
+
+      - name: Install Rust
+        run: |
+          rustup update stable
+          cargo install --locked dioxus-cli
 
       - name: Cache
         uses: actions/cache@v4
@@ -159,39 +146,28 @@ jobs:
             ~/.cargo/registry
             ~/.cargo/git
             target
-          key: linux-allcache-${{ hashFiles('rust-toolchain.toml') }}-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: linux-allcache-
+          key: linux-dioxus-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: linux-dioxus-
 
-      - name: Build Rust
-        run: cargo build --release --locked --features "desktop"
+      - name: Build
+        run: dx bundle --release --platform desktop
 
-      - name: Compress
-        run: |
-          upx --best --lzma target/release/DreamLauncher
-
-      - name: Install AppImage
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y file
-          wget https://github.com/AppImage/AppImageKit/releases/download/continuous/appimagetool-x86_64.AppImage
-          chmod +x appimagetool-x86_64.AppImage
-          sudo mv appimagetool-x86_64.AppImage /usr/local/bin/appimagetool
-
-      - name: Create AppImage
-        run: |
-          chmod +x scripts/linux/appimage.sh
-          ./scripts/linux/appimage.sh
-
-      - name: Upload AppImage
+      - name: Upload Linux
         uses: actions/upload-artifact@v4
         with:
           name: DreamLauncher-Linux-AppImage
           path: |
-            *.AppImage
+            target/release/bundle/appimage/*.AppImage
+            target/release/bundle/deb/*.deb
 
   build-macos:
     name: macOS
     runs-on: macos-15
+    defaults:
+      run:
+        working-directory: launcher
+    env:
+      TAURI_SKIP_XATTR: 1
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -207,7 +183,9 @@ jobs:
           pip install -r python/requirements.txt
 
       - name: Install dependencies
-        run: brew install create-dmg upx
+        run: |
+          rustup update stable
+          cargo install --locked dioxus-cli
 
       - name: Cache
         uses: actions/cache@v4
@@ -218,46 +196,22 @@ jobs:
             ~/.cargo/registry
             ~/.cargo/git
             target
-          key: macos-allcache-${{ hashFiles('rust-toolchain.toml') }}-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: macos-allcache-
+          key: macos-dioxus-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: macos-dioxus-
 
-      - name: Build Rust
-        run: cargo build --release --locked --features "desktop"
-
-      - name: Compress
+      - name: Build
         run: |
-          chmod +x scripts/macos/compress.sh
-          ./scripts/macos/compress.sh "target/release/DreamLauncher"
-
-      - name: Package
-        shell: bash
-        run: |
-          set -e
-          mkdir -p dist
-          chmod +x scripts/macos/bundle.sh
-          ./scripts/macos/bundle.sh
-
-          chmod +x scripts/macos/clean.sh
-          ./scripts/macos/clean.sh "target/release/Dream Launcher.app"
-
-          chmod +x scripts/macos/sign.sh
-          ./scripts/macos/sign.sh "target/release/Dream Launcher.app"
-
-          chmod +x scripts/macos/dmg.sh
-          ./scripts/macos/dmg.sh
-          if [[ -f "Dream Launcher.dmg" ]]; then
-            mv "Dream Launcher.dmg" "dist/Dream Launcher.dmg"
-            echo "DMG created successfully"
-          else
-            echo "No DMG file found"
-            exit 1
-          fi
-
-          echo "macOS packaging completed"
+          dx bundle --release --platform desktop || {
+            echo "Bundle failed due to xattr issues, trying cargo build as fallback"
+            cargo build --release
+            mkdir -p target/release/bundle/macos
+            echo "Fallback build completed, but .app bundle not available"
+          }
 
       - name: Upload macOS
         uses: actions/upload-artifact@v4
         with:
           name: DreamLauncher-macOS
           path: |
-            dist/Dream Launcher.dmg
+            target/release/bundle/macos/*.app
+            target/release/bundle/dmg/*.dmg
