--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "DreamLauncher"
 authors = ["Frogdream Studios"]
-description = "A powerful and lightweight Minecraft launcher that will be perfect for every player"
+description = "A powerful and lightweight Minecraft launcher"
 repository = "https://github.com/FrogdreamStudios/launcher"
 keywords = ["minecraft", "launcher", "java", "gaming", "cross-platform"]
 categories = ["games"]
@@ -44,46 +44,6 @@ regex = "1.11.2"
 hex = "0.4.3"
 pyo3 = { version = "0.26.0", features = ["auto-initialize", "abi3-py38"] }
 
-[features]
-default = ["desktop"]
-desktop = ["dioxus/desktop"]
-minimal = []
-memory-optimized = []
-
-[[bin]]
-name = "DreamLauncher"
-path = "src/main.rs"
-
-[[bin]]
-name = "updater"
-path = "src/bin/updater.rs"
-
-[build-dependencies]
-winres = "0.1.12"
-log = "0.4.27"
-base64 = "0.22.1"
-
-[profile.dev]
-incremental = true
-opt-level = 1
-debug = 1
-
-[profile.release]
-opt-level = "z"
-lto = "fat"
-codegen-units = 1
-panic = "abort"
-strip = "symbols"
-overflow-checks = false
-debug-assertions = false
-rpath = false
-incremental = false
-debug = false
-split-debuginfo = "off"
-
-[profile.release.package."*"]
-opt-level = "z"
-
 [target.'cfg(all(windows, target_arch = "aarch64"))'.dependencies]
 reqwest = { version = "0.12.23", features = ["json", "stream", "native-tls"], default-features = false }
 self_update = { version = "0.42.0", features = [
@@ -106,16 +66,50 @@ dioxus-desktop = { version = "0.7.0-rc.0", default-features = false, features = 
     "tokio_runtime",
 ] }
 
-[package.metadata.bundle]
-name = "Dream Launcher"
-identifier = "com.frogdream.launcher"
-version = "0.1.0"
-copyright = "© 2025 Frogdream Studios"
-category = "Game"
-short_description = "A powerful and lightweight Minecraft launcher"
-long_description = "A powerful and lightweight Minecraft launcher that will be perfect for every player"
+[build-dependencies]
+winres = "0.1.12"
+log = "0.4.27"
+base64 = "0.22.1"
 
-[package.metadata.bundle.windows]
-webview2_install_mode = "embedbootstrapper"
-webview2_user_data_folder = ".dream-launcher"
-console_subsystem = false
+[[bin]]
+name = "DreamLauncher"
+path = "src/main.rs"
+
+[[bin]]
+name = "updater"
+path = "src/bin/updater.rs"
+
+[features]
+default = ["desktop"]
+desktop = ["dioxus/desktop"]
+
+[profile.dev]
+incremental = true
+opt-level = 1
+debug = 1
+
+[profile.release]
+opt-level = "z"
+lto = "fat"
+codegen-units = 1
+panic = "abort"
+strip = "symbols"
+overflow-checks = false
+debug-assertions = false
+rpath = false
+incremental = false
+debug = false
+split-debuginfo = "off"
+
+[profile.release.package."*"]
+opt-level = "z"
+
+[profile.wasm-dev]
+inherits = "dev"
+opt-level = 1
+
+[profile.server-dev]
+inherits = "dev"
+
+[profile.android-dev]
+inherits = "dev"
