--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -12,9 +12,6 @@ jobs:
   build-windows:
     name: Windows x64
     runs-on: windows-2025
-    defaults:
-      run:
-        working-directory: launcher
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -27,7 +24,7 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r python/requirements.txt
+          pip install -r launcher/python/requirements.txt
 
       - name: Install dependencies
         run: |
@@ -47,22 +44,21 @@ jobs:
           restore-keys: windows-x64-dioxus-
 
       - name: Build
-        run: dx bundle --release --platform desktop
+        run: |
+          cd launcher
+          dx bundle --release --platform desktop
 
       - name: Upload installer
         uses: actions/upload-artifact@v4
         with:
           name: DreamLauncher-Windows-x64
           path: |
-            target/release/bundle/msi/*.msi
-            target/release/bundle/nsis/*.exe
+            launcher/target/release/bundle/msi/*.msi
+            launcher/target/release/bundle/nsis/*.exe
 
   build-windows-arm64:
     name: Windows ARM64
     runs-on: windows-2025
-    defaults:
-      run:
-        working-directory: launcher
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -75,7 +71,7 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r python/requirements.txt
+          pip install -r launcher/python/requirements.txt
 
       - name: Install Rust
         run: |
@@ -96,22 +92,21 @@ jobs:
           restore-keys: windows-arm64-dioxus-
 
       - name: Build
-        run: dx bundle --release --platform desktop --target aarch64-pc-windows-msvc
+        run: |
+          cd launcher
+          dx bundle --release --platform desktop --target aarch64-pc-windows-msvc
 
       - name: Upload Windows ARM64 installer
         uses: actions/upload-artifact@v4
         with:
           name: DreamLauncher-Windows-ARM64
           path: |
-            target/aarch64-pc-windows-msvc/release/bundle/msi/*.msi
-            target/aarch64-pc-windows-msvc/release/bundle/nsis/*.exe
+            launcher/target/aarch64-pc-windows-msvc/release/bundle/msi/*.msi
+            launcher/target/aarch64-pc-windows-msvc/release/bundle/nsis/*.exe
 
   build-linux:
     name: Linux
     runs-on: ubuntu-24.04
-    defaults:
-      run:
-        working-directory: launcher
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -124,7 +119,7 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r python/requirements.txt
+          pip install -r launcher/python/requirements.txt
 
       - name: Install dependencies
         uses: awalsh128/cache-apt-pkgs-action@v1
@@ -150,22 +145,21 @@ jobs:
           restore-keys: linux-dioxus-
 
       - name: Build
-        run: dx bundle --release --platform desktop
+        run: |
+          cd launcher
+          dx bundle --release --platform desktop
 
       - name: Upload Linux
         uses: actions/upload-artifact@v4
         with:
           name: DreamLauncher-Linux-AppImage
           path: |
-            target/release/bundle/appimage/*.AppImage
-            target/release/bundle/deb/*.deb
+            launcher/target/release/bundle/appimage/*.AppImage
+            launcher/target/release/bundle/deb/*.deb
 
   build-macos:
     name: macOS
     runs-on: macos-15
-    defaults:
-      run:
-        working-directory: launcher
     env:
       TAURI_SKIP_XATTR: 1
     steps:
@@ -180,7 +174,7 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r python/requirements.txt
+          pip install -r launcher/python/requirements.txt
 
       - name: Install dependencies
         run: |
@@ -201,6 +195,7 @@ jobs:
 
       - name: Build
         run: |
+          cd launcher
           dx bundle --release --platform desktop || {
             echo "Bundle failed due to xattr issues, trying cargo build as fallback"
             cargo build --release
@@ -213,5 +208,5 @@ jobs:
         with:
           name: DreamLauncher-macOS
           path: |
-            target/release/bundle/macos/*.app
-            target/release/bundle/dmg/*.dmg
+            launcher/target/release/bundle/macos/*.app
+            launcher/target/release/bundle/dmg/*.dmg
