--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -24,7 +24,8 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r launcher/python/requirements.txt
+          pip install -r python/requirements.txt
+        working-directory: launcher
 
       - name: Install dependencies
         run: |
@@ -44,17 +45,14 @@ jobs:
           restore-keys: windows-x64-dioxus-
 
       - name: Build
-        run: |
-          cd launcher
-          dx bundle --release --platform desktop
+        run: dx bundle --release --platform desktop
+        working-directory: launcher
 
       - name: Upload installer
         uses: actions/upload-artifact@v4
         with:
-          name: DreamLauncher-Windows-x64
-          path: |
-            launcher/target/release/bundle/msi/*.msi
-            launcher/target/release/bundle/nsis/*.exe
+          name: windows-installer
+          path: launcher/target/release/bundle/
 
   build-windows-arm64:
     name: Windows ARM64
@@ -71,7 +69,8 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r launcher/python/requirements.txt
+          pip install -r python/requirements.txt
+        working-directory: launcher
 
       - name: Install Rust
         run: |
@@ -92,17 +91,14 @@ jobs:
           restore-keys: windows-arm64-dioxus-
 
       - name: Build
-        run: |
-          cd launcher
-          dx bundle --release --platform desktop --target aarch64-pc-windows-msvc
+        run: dx bundle --release --platform desktop --target aarch64-pc-windows-msvc
+        working-directory: launcher
 
       - name: Upload Windows ARM64 installer
         uses: actions/upload-artifact@v4
         with:
-          name: DreamLauncher-Windows-ARM64
-          path: |
-            launcher/target/aarch64-pc-windows-msvc/release/bundle/msi/*.msi
-            launcher/target/aarch64-pc-windows-msvc/release/bundle/nsis/*.exe
+          name: windows-arm64-installer
+          path: launcher/target/aarch64-pc-windows-msvc/release/bundle/
 
   build-linux:
     name: Linux
@@ -119,7 +115,8 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r launcher/python/requirements.txt
+          pip install -r python/requirements.txt
+        working-directory: launcher
 
       - name: Install dependencies
         uses: awalsh128/cache-apt-pkgs-action@v1
@@ -145,17 +142,14 @@ jobs:
           restore-keys: linux-dioxus-
 
       - name: Build
-        run: |
-          cd launcher
-          dx bundle --release --platform desktop
+        run: dx bundle --release --platform desktop
+        working-directory: launcher
 
       - name: Upload Linux
         uses: actions/upload-artifact@v4
         with:
-          name: DreamLauncher-Linux-AppImage
-          path: |
-            launcher/target/release/bundle/appimage/*.AppImage
-            launcher/target/release/bundle/deb/*.deb
+          name: linux-installer
+          path: launcher/target/release/bundle/
 
   build-macos:
     name: macOS
@@ -174,7 +168,8 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r launcher/python/requirements.txt
+          pip install -r python/requirements.txt
+        working-directory: launcher
 
       - name: Install dependencies
         run: |
@@ -195,18 +190,16 @@ jobs:
 
       - name: Build
         run: |
-          cd launcher
           dx bundle --release --platform desktop || {
             echo "Bundle failed due to xattr issues, trying cargo build as fallback"
             cargo build --release
             mkdir -p target/release/bundle/macos
             echo "Fallback build completed, but .app bundle not available"
           }
+        working-directory: launcher
 
       - name: Upload macOS
         uses: actions/upload-artifact@v4
         with:
-          name: DreamLauncher-macOS
-          path: |
-            launcher/target/release/bundle/macos/*.app
-            launcher/target/release/bundle/dmg/*.dmg
+          name: macos-installer
+          path: launcher/target/release/bundle/
