--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r launcher/python/requirements.txt
+          pip install -r python/requirements.txt
 
       - name: Install dependencies
         run: |
@@ -69,7 +69,7 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r launcher/python/requirements.txt
+          pip install -r python/requirements.txt
 
       - name: Install Rust
         run: |
@@ -115,7 +115,7 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r launcher/python/requirements.txt
+          pip install -r python/requirements.txt
 
       - name: Install dependencies
         uses: awalsh128/cache-apt-pkgs-action@v1
@@ -168,7 +168,7 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r launcher/python/requirements.txt
+          pip install -r python/requirements.txt
 
       - name: Install dependencies
         run: |
