--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -40,13 +40,13 @@ pre-commit = [
 
 # Target-specific configurations.
 [target.x86_64-pc-windows-msvc]
-rustflags = ["-C", "target-cpu=native"]
+rustflags = ["-C", "target-cpu=native", "-C", "link-arg=/DEFAULTLIB:advapi32.lib"]
 
 [target.x86_64-unknown-linux-gnu]
 rustflags = ["-C", "target-cpu=native"]
 
 [target.aarch64-pc-windows-msvc]
-rustflags = []
+rustflags = ["-C", "link-arg=/DEFAULTLIB:advapi32.lib"]
 
 
 
