fix: install specific dioxus-cli version

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -12,9 +12,15 @@ jobs:
   build-windows:
     name: Windows x64
     runs-on: windows-2025
+    env:
+      RUSTFLAGS: "-C link-args=/DEFAULTLIB:advapi32.lib"
+      VCPKG_ROOT: ${{ github.workspace }}/vcpkg
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Setup Windows SDK
+        uses: microsoft/setup-msbuild@v1.3
 
       - name: Install Python
         uses: actions/setup-python@v4
@@ -29,7 +35,10 @@ jobs:
       - name: Install dependencies
         run: |
           rustup update stable
-          cargo install --locked dioxus-cli
+          rustup component add rust-src
+          $env:RUSTFLAGS="-C link-args=/DEFAULTLIB:advapi32.lib /DEFAULTLIB:shell32.lib /DEFAULTLIB:user32.lib"
+          cargo install dioxus-cli --version 0.5.7 --locked
+        shell: powershell
 
       - name: Cache
         uses: actions/cache@v4
@@ -55,9 +64,15 @@ jobs:
   build-windows-arm64:
     name: Windows ARM64
     runs-on: windows-2025
+    env:
+      RUSTFLAGS: "-C link-args=/DEFAULTLIB:advapi32.lib"
+      VCPKG_ROOT: ${{ github.workspace }}/vcpkg
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Setup Windows SDK
+        uses: microsoft/setup-msbuild@v1.3
 
       - name: Install Python
         uses: actions/setup-python@v4
@@ -73,7 +88,10 @@ jobs:
         run: |
           rustup update stable
           rustup target add aarch64-pc-windows-msvc
-          cargo install --locked dioxus-cli
+          rustup component add rust-src
+          $env:RUSTFLAGS="-C link-args=/DEFAULTLIB:advapi32.lib /DEFAULTLIB:shell32.lib /DEFAULTLIB:user32.lib"
+          cargo install dioxus-cli --version 0.5.7 --locked
+        shell: powershell
 
       - name: Cache
         uses: actions/cache@v4
@@ -122,7 +140,7 @@ jobs:
       - name: Install Rust
         run: |
           rustup update stable
-          cargo install --locked dioxus-cli
+          cargo install dioxus-cli --version 0.5.7 --locked || cargo install dioxus-cli --version 0.5.6 --locked || cargo install dioxus-cli --version 0.5.5 --locked
 
       - name: Cache
         uses: actions/cache@v4
@@ -167,7 +185,7 @@ jobs:
       - name: Install dependencies
         run: |
           rustup update stable
-          cargo install --locked dioxus-cli
+          cargo install dioxus-cli --version 0.5.7 --locked || cargo install dioxus-cli --version 0.5.6 --locked || cargo install dioxus-cli --version 0.5.5 --locked
 
       - name: Cache
         uses: actions/cache@v4
