--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -76,6 +76,18 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r python/requirements.txt
 
+      - name: Install Python libs path
+        shell: pwsh
+        run: |
+          $pythonRoot = (python -c "import sys; print(sys.base_prefix)")
+          $libPath = Join-Path $pythonRoot "libs"
+          echo "Python libs path: $libPath"
+          echo "LIB=$libPath;$env:LIB" | Out-File -FilePath $env:GITHUB_ENV -Append
+          if (!(Test-Path (Join-Path $libPath "python3.lib"))) {
+            Write-Host "python3.lib not found in $libPath"
+            exit 1
+          }
+
       - name: Install Rust
         run: |
           rustup update stable
